infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homesphere-ingress
  namespace: homesphere
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: api.homesphere.example.com
      http:
        paths:
          - path: /
    - host: sphere.dlssr.in
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: homesphere-api
                port:
                  number: 80
    - host: app.homesphere.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homesphere-web
                port:
                  number: 80
